--- a/main.ui
+++ b/main.ui
@@ -54,7 +54,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>160</y>
+        <y>180</y>
         <width>89</width>
         <height>25</height>
        </rect>
@@ -68,6 +68,29 @@
        <rect>
         <x>10</x>
         <y>100</y>
+        <width>171</width>
+        <height>25</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="generate_button_2">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>180</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>create </string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="last_string">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>140</y>
         <width>171</width>
         <height>25</height>
        </rect>
