--- a/main.ui
+++ b/main.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>985</width>
+    <width>1075</width>
     <height>711</height>
    </rect>
   </property>
@@ -35,9 +35,19 @@
        <rect>
         <x>10</x>
         <y>20</y>
-        <width>171</width>
+        <width>201</width>
         <height>25</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">.left_border
+{
+    background: transparent;
+    border: none;
+}</string>
+      </property>
+      <property name="text">
+       <string>F5</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="right_borde">
@@ -45,9 +55,12 @@
        <rect>
         <x>10</x>
         <y>60</y>
-        <width>171</width>
+        <width>201</width>
         <height>25</height>
        </rect>
+      </property>
+      <property name="text">
+       <string>Q316</string>
       </property>
      </widget>
      <widget class="QPushButton" name="generate_button">
@@ -60,7 +73,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>generate</string>
+       <string>Месяцам</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="categories_location">
@@ -68,12 +81,15 @@
        <rect>
         <x>10</x>
         <y>100</y>
-        <width>171</width>
+        <width>201</width>
         <height>25</height>
        </rect>
       </property>
+      <property name="text">
+       <string>2222121</string>
+      </property>
      </widget>
-     <widget class="QPushButton" name="generate_button_2">
+     <widget class="QPushButton" name="generate_quarter">
       <property name="geometry">
        <rect>
         <x>120</x>
@@ -83,17 +99,98 @@
        </rect>
       </property>
       <property name="text">
-       <string>create </string>
+       <string>Кварталам</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="last_string">
+     <widget class="QPushButton" name="add_one">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>20</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>1</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="add_two">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>40</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>2</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="add_three">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>60</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>3</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="add_four">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>80</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>4</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="name">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>140</y>
-        <width>171</width>
+        <width>201</width>
         <height>25</height>
        </rect>
+      </property>
+      <property name="text">
+       <string>B5</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="read_file">
+      <property name="geometry">
+       <rect>
+        <x>350</x>
+        <y>20</y>
+        <width>161</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Открыть файл</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="record_file">
+      <property name="geometry">
+       <rect>
+        <x>350</x>
+        <y>50</y>
+        <width>161</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Открыть файл записи</string>
       </property>
      </widget>
     </widget>
@@ -111,7 +208,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>sosi</string>
+       <string>da ya</string>
       </property>
      </widget>
     </widget>
@@ -122,7 +219,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>985</width>
+     <width>1075</width>
      <height>22</height>
     </rect>
    </property>
