--- a/main.ui
+++ b/main.ui
@@ -13,64 +13,92 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QMainWindow{
+background-color:#008CBA;
+}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>10</y>
+      <x>320</x>
+      <y>40</y>
       <width>531</width>
       <height>561</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QTabWidget{
+backround-color:#555555;
+}</string>
+    </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
-      <string>Tab 1</string>
+      <string>Посчитать сезонность</string>
      </attribute>
      <widget class="QLineEdit" name="left_border">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>20</y>
-        <width>201</width>
-        <height>25</height>
+        <x>50</x>
+        <y>134</y>
+        <width>211</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">.left_border
-{
-    background: transparent;
-    border: none;
+       <string notr="true">QLineEdit:focus {
+  background-color: lightblue;
 }</string>
       </property>
       <property name="text">
-       <string>F5</string>
+       <string>Введите левую границу</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="right_borde">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>60</y>
-        <width>201</width>
-        <height>25</height>
+        <x>50</x>
+        <y>174</y>
+        <width>211</width>
+        <height>21</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit:focus {
+  background-color: lightblue;
+}</string>
+      </property>
       <property name="text">
-       <string>Q316</string>
+       <string>Введите правую границу</string>
       </property>
      </widget>
      <widget class="QPushButton" name="generate_button">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>180</y>
-        <width>89</width>
-        <height>25</height>
+        <x>50</x>
+        <y>300</y>
+        <width>151</width>
+        <height>41</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+  background-color: #008CBA; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}</string>
       </property>
       <property name="text">
        <string>Месяцам</string>
@@ -79,24 +107,41 @@
      <widget class="QLineEdit" name="categories_location">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>100</y>
-        <width>201</width>
+        <x>50</x>
+        <y>210</y>
+        <width>211</width>
         <height>25</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit:focus {
+  background-color: lightblue;
+}</string>
+      </property>
       <property name="text">
-       <string>2222121</string>
+       <string>Введите категории</string>
       </property>
      </widget>
      <widget class="QPushButton" name="generate_quarter">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>180</y>
-        <width>89</width>
-        <height>25</height>
+        <x>230</x>
+        <y>300</y>
+        <width>151</width>
+        <height>41</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+  background-color: #008CBA; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}</string>
       </property>
       <property name="text">
        <string>Кварталам</string>
@@ -105,11 +150,21 @@
      <widget class="QPushButton" name="add_one">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>20</y>
+        <x>270</x>
+        <y>130</y>
         <width>89</width>
         <height>25</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+  transition-duration: 0.4s;
+}
+
+QPushButton:hover {
+  background-color: #008CBA; /* Green */
+  color: white;
+}</string>
       </property>
       <property name="text">
        <string>1</string>
@@ -118,11 +173,21 @@
      <widget class="QPushButton" name="add_two">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>40</y>
+        <x>270</x>
+        <y>150</y>
         <width>89</width>
         <height>25</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+  transition-duration: 0.4s;
+}
+
+QPushButton:hover {
+  background-color: #008CBA; /* Green */
+  color: white;
+}</string>
       </property>
       <property name="text">
        <string>2</string>
@@ -131,11 +196,21 @@
      <widget class="QPushButton" name="add_three">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>60</y>
+        <x>270</x>
+        <y>170</y>
         <width>89</width>
         <height>25</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+  transition-duration: 0.4s;
+}
+
+QPushButton:hover {
+  background-color: #008CBA; /* Green */
+  color: white;
+}</string>
       </property>
       <property name="text">
        <string>3</string>
@@ -144,11 +219,21 @@
      <widget class="QPushButton" name="add_four">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>80</y>
+        <x>270</x>
+        <y>190</y>
         <width>89</width>
-        <height>25</height>
+        <height>21</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+  transition-duration: 0.4s;
+}
+
+QPushButton:hover {
+  background-color: #008CBA; /* Green */
+  color: white;
+}</string>
       </property>
       <property name="text">
        <string>4</string>
@@ -157,21 +242,26 @@
      <widget class="QLineEdit" name="name">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>140</y>
-        <width>201</width>
+        <x>50</x>
+        <y>250</y>
+        <width>211</width>
         <height>25</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit:focus {
+  background-color: lightblue;
+}</string>
+      </property>
       <property name="text">
-       <string>B5</string>
+       <string>Ячейку над названиями</string>
       </property>
      </widget>
      <widget class="QPushButton" name="read_file">
       <property name="geometry">
        <rect>
-        <x>350</x>
-        <y>20</y>
+        <x>0</x>
+        <y>10</y>
         <width>161</width>
         <height>25</height>
        </rect>
@@ -183,8 +273,8 @@
      <widget class="QPushButton" name="record_file">
       <property name="geometry">
        <rect>
-        <x>350</x>
-        <y>50</y>
+        <x>0</x>
+        <y>40</y>
         <width>161</width>
         <height>25</height>
        </rect>
@@ -196,19 +286,244 @@
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
-      <string>Tab 2</string>
+      <string>Посчитать временные ряды</string>
      </attribute>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="read_time_row_file">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>90</y>
-        <width>89</width>
+        <x>0</x>
+        <y>10</y>
+        <width>161</width>
         <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>da ya</string>
+       <string>Открыть файл</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="name_3">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>250</y>
+        <width>211</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit:focus {
+  background-color: lightblue;
+}</string>
+      </property>
+      <property name="text">
+       <string>Ячейку над названиями</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="time_row_button">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>370</y>
+        <width>151</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+  background-color: #008CBA; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}</string>
+      </property>
+      <property name="text">
+       <string>Кварталам</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="right_borde_3">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>174</y>
+        <width>211</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit:focus {
+  background-color: lightblue;
+}</string>
+      </property>
+      <property name="text">
+       <string>Введите правую границу</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="add_one_3">
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>130</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+  transition-duration: 0.4s;
+}
+
+QPushButton:hover {
+  background-color: #008CBA; /* Green */
+  color: white;
+}</string>
+      </property>
+      <property name="text">
+       <string>1</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="add_two_3">
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>150</y>
+        <width>89</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+  transition-duration: 0.4s;
+}
+
+QPushButton:hover {
+  background-color: #008CBA; /* Green */
+  color: white;
+}</string>
+      </property>
+      <property name="text">
+       <string>2</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="categories_location_3">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>210</y>
+        <width>211</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit:focus {
+  background-color: lightblue;
+}</string>
+      </property>
+      <property name="text">
+       <string>Введите категории</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="left_border_3">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>134</y>
+        <width>211</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit:focus {
+  background-color: lightblue;
+}</string>
+      </property>
+      <property name="text">
+       <string>Введите левую границу</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="name_4">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>290</y>
+        <width>211</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit:focus {
+  background-color: lightblue;
+}</string>
+      </property>
+      <property name="text">
+       <string>Введите номер категории</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="add_two_4">
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>170</y>
+        <width>89</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+  transition-duration: 0.4s;
+}
+
+QPushButton:hover {
+  background-color: #008CBA; /* Green */
+  color: white;
+}</string>
+      </property>
+      <property name="text">
+       <string>3</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="add_two_5">
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>190</y>
+        <width>89</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+  transition-duration: 0.4s;
+}
+
+QPushButton:hover {
+  background-color: #008CBA; /* Green */
+  color: white;
+}</string>
+      </property>
+      <property name="text">
+       <string>4</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="name_5">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>330</y>
+        <width>211</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit:focus {
+  background-color: lightblue;
+}</string>
+      </property>
+      <property name="text">
+       <string>Введите номер квартала </string>
       </property>
      </widget>
     </widget>
